force-app/main/default/objects/Developer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>To store the developer country</description>
    <inlineHelpText>Enter the country</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>state_GVS</valueSetName>
    </valueSet>
</CustomField>