force-app/main/default/objects/Developer__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReportingManager</label>
    <referenceTo>manager__c</referenceTo>
    <relationshipLabel>Developer</relationshipLabel>
    <relationshipName>Developer</relationshipName>
    <type>Lookup</type>
</CustomField>