force-app/main/default/objects/Developer__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>